--- a/main/http_server/axe-os/src/app/pages/home/home.component.scss
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.scss
@@ -52,7 +52,9 @@ nb-card-header {
 }
 
 .col-fixed-width {
-  width: 50px;
+  width: 80px;
+  min-width: 80px;
+  flex-shrink: 0;
 }
 .break-all {
   word-break: break-all;
