--- a/main/http_server/axe-os/src/app/@auth/reset-password/reset-password.component.html
+++ b/main/http_server/axe-os/src/app/@auth/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
-<h1 id="title" class="title">Change password</h1>
-<p class="sub-title">Please set a new password</p>
+<h1 id="title" class="title">{{ 'AUTH.CHANGE_PASSWORD' | translate }}</h1>
+<p class="sub-title">{{ 'AUTH.SET_NEW_PASSWORD' | translate }}</p>
 
 <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
   <p class="alert-title"><b>Oh snap!</b></p>
@@ -17,7 +17,7 @@
 
 <form (ngSubmit)="resetPass()" #resetPassForm="ngForm" aria-labelledby="title">
     <div class="form-control-group">
-        <label class="label" for="input-password">Old Password:</label>
+        <label class="label" for="input-password">{{ 'AUTH.OLD_PASSWORD' | translate }}:</label>
         <input nbInput
                [(ngModel)]="user.oldPassword"
                #oldPassword="ngModel"
@@ -25,7 +25,7 @@
                id="input-password"
                name="oldPassword"
                class="first"
-               placeholder="Old Password"
+               [placeholder]="'AUTH.OLD_PASSWORD' | translate"
                autofocus
                fullWidth
                fieldSize="large"
@@ -36,10 +36,10 @@
                [attr.aria-invalid]="oldPassword.invalid && oldPassword.touched ? true : null">
         <ng-container *ngIf="oldPassword.invalid && oldPassword.touched">
           <p class="caption status-danger" *ngIf="oldPassword.errors?.['required']">
-            Old Password is required!
+            {{ 'AUTH.OLD_PASSWORD_REQUIRED' | translate }}
           </p>
           <p class="caption status-danger" *ngIf="oldPassword.errors?.['minLength'] || oldPassword.errors?.['maxLength']">
-            Old Password should contains
+            {{ 'AUTH.PASSWORD_LENGTH' | translate }}
             from {{getConfigValue('forms.validation.password.minLength')}}
             to {{getConfigValue('forms.validation.password.maxLength')}}
             characters
@@ -47,7 +47,7 @@
         </ng-container>
       </div>
   <div class="form-control-group">
-    <label class="label" for="input-password">New Password:</label>
+    <label class="label" for="input-password">{{ 'AUTH.NEW_PASSWORD' | translate }}:</label>
     <input nbInput
            [(ngModel)]="user.password"
            #password="ngModel"
@@ -55,7 +55,7 @@
            id="input-password"
            name="password"
            class="first"
-           placeholder="New Password"
+           [placeholder]="'AUTH.NEW_PASSWORD' | translate"
            autofocus
            fullWidth
            fieldSize="large"
@@ -66,10 +66,10 @@
            [attr.aria-invalid]="password.invalid && password.touched ? true : null">
     <ng-container *ngIf="password.invalid && password.touched">
       <p class="caption status-danger" *ngIf="password.errors?.['required']">
-        Password is required!
+        {{ 'AUTH.PASSWORD_REQUIRED' | translate }}
       </p>
       <p class="caption status-danger" *ngIf="password.errors?.['minLength'] || password.errors?.['maxLength']">
-        Password should contains
+        {{ 'AUTH.PASSWORD_LENGTH' | translate }}
         from {{getConfigValue('forms.validation.password.minLength')}}
         to {{getConfigValue('forms.validation.password.maxLength')}}
         characters
@@ -78,7 +78,7 @@
   </div>
 
   <div class="form-group">
-    <label class="label" for="input-re-password">Confirm Password:</label>
+    <label class="label" for="input-re-password">{{ 'AUTH.CONFIRM_PASSWORD' | translate }}:</label>
     <input nbInput
            [(ngModel)]="user.confirmPassword"
            #rePass="ngModel"
@@ -86,7 +86,7 @@
            name="rePass"
            type="password"
            class="last"
-           placeholder="Confirm Password"
+           [placeholder]="'AUTH.CONFIRM_PASSWORD' | translate"
            fullWidth
            fieldSize="large"
            [status]="rePass.touched
@@ -96,10 +96,10 @@
            [attr.aria-invalid]="rePass.invalid && rePass.touched ? true : null">
     <ng-container *ngIf="rePass.touched">
       <p class="caption status-danger" *ngIf="rePass.invalid && rePass.errors?.['required']">
-        Password confirmation is required!
+        {{ 'AUTH.CONFIRM_PASSWORD_REQUIRED' | translate }}
       </p>
       <p class="caption status-danger" *ngIf="password.value != rePass.value && !rePass.errors?.['required']">
-        Password does not match the confirm password.
+        {{ 'AUTH.PASSWORD_MISMATCH' | translate }}
       </p>
     </ng-container>
   </div>
@@ -110,11 +110,11 @@
           size="large"
           [disabled]="submitted || !resetPassForm.valid"
           [class.btn-pulse]="submitted">
-    Change password
+    {{ 'AUTH.CHANGE_PASSWORD' | translate }}
   </button>
 </form>
 
 <section class="sign-in-or-up" aria-label="Sign in or sign up">
-  <p><a class="text-link" routerLink="../login">Back to Log In</a></p>
-  <p><a class="text-link" routerLink="/pages/dashboard">Ignore</a></p>
+  <p><a class="text-link" routerLink="../login">{{ 'AUTH.BACK_TO_LOGIN' | translate }}</a></p>
+  <p><a class="text-link" routerLink="/pages/dashboard">{{ 'AUTH.IGNORE' | translate }}</a></p>
 </section>
