--- a/main/http_server/axe-os/src/app/@theme/components/help/help.component.html
+++ b/main/http_server/axe-os/src/app/@theme/components/help/help.component.html
@@ -1,5 +1,5 @@
 <nb-card [size]="'medium'" class="help-card">
-    <nb-card-header>HELP</nb-card-header>
+    <nb-card-header>{{ 'HELP.TITLE' | translate }}</nb-card-header>
     <nb-card-body>
         <p [innerHtml]="key | translate"></p>
     </nb-card-body>
