--- a/main/http_server/axe-os/src/app/pages/influxdb/influxdb.component.html
+++ b/main/http_server/axe-os/src/app/pages/influxdb/influxdb.component.html
@@ -1,17 +1,17 @@
 <ng-template #loading>
-    <h4>Loading...</h4>
+    <h4>{{ 'COMMON.LOADING' | translate }}</h4>
 </ng-template>
 
 <ng-container *ngIf="form != null; else loading">
     <form [formGroup]="form">
         <nb-card>
-            <nb-card-header>InfluxDB Settings</nb-card-header>
+            <nb-card-header>{{ 'INFLUXDB.TITLE' | translate }}</nb-card-header>
             <nb-card-body>
                 <div class="form-row">
-                    <nb-checkbox formControlName="influxEnable">Enable</nb-checkbox>
+                    <nb-checkbox formControlName="influxEnable">{{ 'INFLUXDB.ENABLED' | translate }}</nb-checkbox>
                 </div>
                 <div class="form-row">
-                    <label for="influxURL" class="form-label">Influx URL:</label>
+                    <label for="influxURL" class="form-label">{{ 'INFLUXDB.URL' | translate }}:</label>
                     <div class="form-control-wrapper">
                         <input nbInput id="influxURL" type="text" formControlName="influxURL"
                             placeholder="e.g., http://192.168.0.123" /><br />
@@ -19,45 +19,45 @@
                     </div>
                 </div>
                 <div class="form-row">
-                    <label for="influxPort" class="form-label">Influx Port:</label>
+                    <label for="influxPort" class="form-label">{{ 'INFLUXDB.PORT' | translate }}:</label>
                     <div class="form-control-wrapper">
                         <input nbInput id="influxPort" formControlName="influxPort" type="number" />
                     </div>
                 </div>
                 <div class="form-row">
-                    <label for="influxToken" class="form-label">Token:</label>
+                    <label for="influxToken" class="form-label">{{ 'INFLUXDB.TOKEN' | translate }}:</label>
                     <div class="form-control-wrapper">
                         <input nbInput id="influxToken" formControlName="influxToken" type="password" />
                     </div>
                 </div>
                 <div class="form-row">
-                    <label for="influxBucket" class="form-label">Bucket:</label>
+                    <label for="influxBucket" class="form-label">{{ 'INFLUXDB.BUCKET' | translate }}:</label>
                     <div class="form-control-wrapper">
                         <input nbInput id="influxBucket" formControlName="influxBucket" type="text" />
                     </div>
                 </div>
                 <div class="form-row">
-                    <label for="influxOrg" class="form-label">Org:</label>
+                    <label for="influxOrg" class="form-label">{{ 'INFLUXDB.ORG' | translate }}:</label>
                     <div class="form-control-wrapper">
                         <input nbInput id="influxOrg" formControlName="influxOrg" type="text" />
                     </div>
                 </div>
                 <div class="form-row">
-                    <label for="influxPrefix" class="form-label">Prefix:</label>
+                    <label for="influxPrefix" class="form-label">{{ 'INFLUXDB.PREFIX' | translate }}:</label>
                     <div class="form-control-wrapper">
                         <input nbInput id="influxPrefix" formControlName="influxPrefix" type="text" />
                     </div>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-2">
                     <div><button nbButton size="small" [disabled]="form.invalid" (click)="updateSystem()"
-                            [status]="'danger'">Save</button>&nbsp;
+                            [status]="'danger'">{{ 'COMMON.SAVE' | translate }}</button>&nbsp;
                     </div>
-                    <div><button nbButton size="small" (click)="restart()" nbTooltip="'asdf'"
-                            status="danger">Restart</button></div>
+                    <div><button nbButton size="small" (click)="restart()" [nbTooltip]="'INFLUXDB.RESTART_TOOLTIP' | translate"
+                            status="danger">{{ 'SYSTEM.RESTART' | translate }}</button></div>
 
                 </div>
                 <div>
-                    <b>You must restart this device after saving for changes to take effect.</b>
+                    <b>{{ 'INFLUXDB.RESTART_REQUIRED' | translate }}</b>
                 </div>
             </nb-card-body>
         </nb-card>
