--- a/main/http_server/axe-os/src/app/pages/system/system.component.html
+++ b/main/http_server/axe-os/src/app/pages/system/system.component.html
@@ -1,26 +1,26 @@
 <ng-container *ngIf="info$ | async as info">
     <nb-card>
-        <nb-card-header>Overview</nb-card-header>
+        <nb-card-header>{{ 'SYSTEM.OVERVIEW' | translate }}</nb-card-header>
         <nb-card-body>
             <table class="overview-table">
                 <tr>
-                    <td><b>Model:</b></td>
+                    <td><b>{{ 'SYSTEM.MODEL' | translate }}:</b></td>
                     <td>{{ info.deviceModel }} ({{ info.ASICModel }})</td>
                 </tr>
                 <tr>
-                    <td><b>Uptime:</b></td>
+                    <td><b>{{ 'SYSTEM.UPTIME' | translate }}:</b></td>
                     <td>{{ info.uptimeSeconds | dateAgo }}&nbsp;&nbsp;&nbsp;<button nbButton size="small"
-                            (click)="restart()" status="danger">Restart</button></td>
+                            (click)="restart()" status="danger">{{ 'SYSTEM.RESTART' | translate }}</button></td>
                 </tr>
                 <tr>
-                    <td><b>Last Reset Reason:</b></td>
-                    <td>{{ info.lastResetReason }}</td>
+                    <td><b>{{ 'SYSTEM.LAST_RESET_REASON' | translate }}:</b></td>
+                    <td>{{ info.lastResetReason | translate }}</td>
                 </tr>
                 <tr>
-                  <td><b>WiFi Status:</b></td>
+                  <td><b>{{ 'SYSTEM.WIFI_STATUS' | translate }}:</b></td>
                   <td>
                     <span class="wifi-status-combined">
-                      {{ info.wifiStatus }}
+                      {{ info.wifiStatus | translate }}
                       <span class="rssi-inline">
                         ({{ info.wifiRSSI }} dBm)
                         <div class="wifi-bars" [attr.title]="getRssiTooltip(info.wifiRSSI)">
@@ -34,15 +34,15 @@
                   </td>
                 </tr>
                 <tr>
-                    <td><b>MAC Address:</b></td>
+                    <td><b>{{ 'SYSTEM.MAC_ADDRESS' | translate }}:</b></td>
                     <td>{{ info.macAddr }}</td>
                 </tr>
                 <tr>
-                    <td><b>Free Heap Memory:</b></td>
+                    <td><b>{{ 'SYSTEM.FREE_HEAP_MEMORY' | translate }}:</b></td>
                     <td>SRAM: {{ info.freeHeapInt }}, PSRAM: {{ info.freeHeap }}</td>
                 </tr>
                 <tr>
-                    <td><b>Version:</b></td>
+                    <td><b>{{ 'SYSTEM.VERSION' | translate }}:</b></td>
                     <td>{{ info.version }}</td>
                 </tr>
             </table>
@@ -51,21 +51,21 @@
 
     <nb-card class="mt-4">
         <nb-card-header style="display: flex; align-items: center; flex-wrap: nowrap;">
-            Realtime Logs
+            {{ 'SYSTEM.REALTIME_LOGS' | translate }}
             <button nbButton size="small" status="primary" (click)="toggleLogs()" style="margin-left: 15px;">
-                {{ showLogs ? 'Hide' : 'Show' }} Logs
+                {{ showLogs ? ('SYSTEM.HIDE' | translate) : ('SYSTEM.SHOW' | translate) }} {{ 'SYSTEM.LOGS' | translate }}
             </button>
             <button nbButton size="small" status="warning" (click)="stopScroll = !stopScroll" *ngIf="showLogs"
                 style="margin-left: 15px;">
-                {{ stopScroll ? 'Start' : 'Stop' }} Scrolling
+                {{ stopScroll ? ('SYSTEM.START' | translate) : ('SYSTEM.STOP' | translate) }} {{ 'SYSTEM.SCROLLING' | translate }}
             </button>
             <div *ngIf="showLogs" style="display: flex; align-items: center; margin-left: 15px; margin-top: 0;">
             <!-- Clear Filter Button -->
               <button nbButton size="small" status="info" (click)="logFilterText = ''" style="margin-right: 10px;">
-                Clear Filter
+                {{ 'SYSTEM.CLEAR_FILTER' | translate }}
               </button>
-              <label for="logFilterText" style="margin-right: 5px;">Filter</label>
-                <input id="logFilterText" type="text" [(ngModel)]="logFilterText" placeholder="Filter logs..."
+              <label for="logFilterText" style="margin-right: 5px;">{{ 'SYSTEM.FILTER' | translate }}</label>
+                <input id="logFilterText" type="text" [(ngModel)]="logFilterText" [placeholder]="'SYSTEM.FILTER_LOGS_PLACEHOLDER' | translate"
                   style="margin-left: 5px; flex-grow: 1; width: calc(100% - 210px);" />
             </div>
         </nb-card-header>
