--- a/main/http_server/axe-os/src/app/pages/home/home.component.html
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.html
@@ -292,6 +292,14 @@
 
               <div class="row flex-nowrap">
                 <div class="col-fixed-width">
+                  <span class="text-hint">{{ 'POOL_INFO.LOSS' | translate }}:</span>
+                </div>
+                <div class="col">
+                  {{ info.recentPingLoss !== undefined ? (info.recentPingLoss * 100).toFixed(2) + ' %' : 'n/a' }}
+                </div>
+              </div>
+              <div class="row flex-nowrap">
+                <div class="col-fixed-width">
                   <span class="text-hint">{{ 'POOL_INFO.DIFF' | translate }}:</span>
                 </div>
                 <div class="col">
