fixed variable name

--- a/main/http_server/axe-os/src/app/pages/home/home.component.html
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.html
@@ -295,7 +295,7 @@
                   <span class="text-hint">{{ 'POOL_INFO.LOSS' | translate }}:</span>
                 </div>
                 <div class="col">
-                  {{ info.recentPingLoss !== undefined ? (info.recentPingLoss * 100).toFixed(2) + ' %' : 'n/a' }}
+                  {{ info.recentpingloss !== undefined ? (info.recentpingloss * 100).toFixed(2) + ' %' : 'n/a' }}
                 </div>
               </div>
               <div class="row flex-nowrap">
